Deployment ready: Configured dynamic API and CORS